--- a/LT_Grid/111.html
+++ b/LT_Grid/111.html
@@ -19,9 +19,8 @@
                     <div><a href="#">Услуги</a></div>
                     <div class="send">
                         <span class="send_text"><a href="#">Оставить заявку</a></span>
-                    </div>    
+                    </div>
                 </div>
-                
             </div>
             <div class="logo">
                 <a href="#">
@@ -96,7 +95,7 @@
                     <img src="img/street.jpg" alt="">
                 </div>
                 <div class="video-display">
-                    <img src="img/media.jpg" alt="">
+                    <img src="img/vodeo.jpg" alt="">
                     <div class="content">
                         <h2>Видеоэкраны для помещений</h2>
                         <p>Светодиодные экраны для помещений предназначены для круглогодичной работы в прекрасном качестве.
@@ -129,7 +128,37 @@
             <h2>УЗНАЙТЕ О НАШЕМ ПРЕДЛОЖЕНИИ ЗА 5 МИНУТ</h2>
             <video href="https://youtu.be/8r9L3HnnbOw" controls="controls"></video>
         </div>
-        <div class="grid-item footer"></div>
+        <div class="grid-item footer">
+            <div class="map_site">
+                <h4>Карта сайта</h4>
+                <div class="links">
+                    <p><a>Каталог продукции</a> <a>Вопросы - ответы</a> 
+                        <a>Доставка</a> <a>Оплата Проекты</a>
+                        <a>Контакты</a> <a>Блог</a> 
+                        <a>О компании</a> <a>Услуги</a> 
+                        <a>Готовый бизнес</a> <a>Медиафасады</a>
+                        <a>Экраны для помещений</a> <a>Видеоборд</a> 
+                        <a>LED Ситилайт</a> <a>Экраны для улицы</a>/</p> 
+                </div> 
+                <div class="ruls">
+                        <p><a>Правовая информация</a></p>
+                        <p><a>Политика конфиденциальности</a></p>
+                </div>
+                <p>© 2019 LEDINTECH</p>
+            </div>
+            <div class="contact">
+                <h3>(044)22-77-567</h3>
+                <a href="mailto:info@ledintech.com.ua" 
+                data-type="mail">info@ledintech.com.ua</a>
+                <p>ул. Жилянская, 5, Киев, 01001, Украина</p>
+            </div>
+            <div class="time_work">
+                <h4>Часы работы:</h4>
+                <p>ПН–ПТ: с 9:00 до 19:00  
+                Суббота: с 11:00 до 17:00
+                Воскресенье: выходной</p>
+            </div>
+        </div>
 </body>
 
 </html>
